--- a/Java-Core/pom.xml
+++ b/Java-Core/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>Java-Core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId></groupId>
+            <artifactId>jdbc.</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
