--- a/Java-Core/pom.xml
+++ b/Java-Core/pom.xml
@@ -7,12 +7,27 @@
     <groupId>com.chengch.JavaCore</groupId>
     <artifactId>Java-Core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
-            <groupId></groupId>
-            <artifactId>jdbc.</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.2</version>
         </dependency>
+
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
